k8s/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-go
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-go
  template:
    metadata:
      labels:
        app: api-go
    spec:
      containers:
      - name:  api-go
        image: farrasyakila/api-go-dev
        resources:
          limits:
            cpu: "0.4"
            memory: 500Mi
          requests:
            cpu: "0.1"
            memory: 150Mi
        ports:
        - containerPort: 8080
