k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-go
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: api-go
