k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: api-go-dev.farrasyakila.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-go
            port:
              number: 80
